--- a/index.html
+++ b/index.html
@@ -1,10 +1,111 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>Hello World</title>
+  <meta charset="UTF-8">
+  <title>Kendo Grading Calculator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f4f4f4;
+      max-width: 600px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      text-align: center;
+      color: #222;
+    }
+
+    .description {
+      margin-bottom: 1.5rem;
+      font-size: 1rem;
+      color: #444;
+    }
+
+    label {
+      display: block;
+      margin-top: 1rem;
+      font-weight: bold;
+    }
+
+    input[type="date"] {
+      width: 100%;
+      padding: 0.5rem;
+      font-size: 1rem;
+      margin-top: 0.3rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .field-group {
+      margin-bottom: 1rem;
+    }
+  </style>
 </head>
 <body>
-    
+
+  <h1>Kendo Grading Calculator</h1>
+
+  <div class="description">
+    Enter the dates you achieved each grade. This calculator will help determine when you're eligible for your next grading and show you the next available events.
+  </div>
+
+  <form id="grading-form">
+    <div class="field-group">
+      <label for="date-started">Date Started</label>
+      <input type="date" id="date-started" name="date-started">
+    </div>
+
+    <div class="field-group">
+      <label for="ikkyu">Ikkyu</label>
+      <input type="date" id="ikkyu" name="ikkyu">
+    </div>
+
+    <div class="field-group">
+      <label for="shodan">1st Dan</label>
+      <input type="date" id="shodan" name="shodan">
+    </div>
+
+    <div class="field-group">
+      <label for="nidan">2nd Dan</label>
+      <input type="date" id="nidan" name="nidan">
+    </div>
+
+    <div class="field-group">
+      <label for="sandan">3rd Dan</label>
+      <input type="date" id="sandan" name="sandan">
+    </div>
+
+    <div class="field-group">
+      <label for="yondan">4th Dan</label>
+      <input type="date" id="yondan" name="yondan">
+    </div>
+
+    <div class="field-group">
+      <label for="godan">5th Dan</label>
+      <input type="date" id="godan" name="godan">
+    </div>
+
+    <div class="field-group">
+      <label for="rokudan">6th Dan</label>
+      <input type="date" id="rokudan" name="rokudan">
+    </div>
+
+    <div class="field-group">
+      <label for="nanadan">7th Dan</label>
+      <input type="date" id="nanadan" name="nanadan">
+    </div>
+
+    <div class="field-group">
+      <label for="hachidan">8th Dan</label>
+      <input type="date" id="hachidan" name="hachidan">
+    </div>
+  </form>
+
 </body>
 </html>
