Push version 0.1.1 - Webscraping

--- a/index.html
+++ b/index.html
@@ -200,8 +200,12 @@
 <script src="grading-calculator.js"></script>
 
 <footer class="page-footer">
-  <p><strong>Version:</strong> 0.1.0</p>
-  <p>Notes: Last Updated 2025-07-13 by Kyall Fordham-Weir. Events are manually loaded and not updated live.</p>
+  <p><strong>Version:</strong> 0.1.1</p>
+  <p>Notes: Last Updated 2025-07-13 by Kyall Fordham-Weir. 
+    Events are scraped from https://www.britishkendoassociation.com/calendar/ 
+    Grading details are not held within the calendar so all grading levels are set to 'godan' 
+    - To be updated to properly scrape the event pages (At some point)
+    See : https://github.com/Kyallface/kyallface.github.io</p>
 </footer>
 </body>
 </html>
