Updates to Webscraper, moved into Repo for Autoaction runs later on

--- a/index.html
+++ b/index.html
@@ -158,18 +158,18 @@
     </div>
 
     <div class="requirements">
-      <h3>Grading Requirements</h3>
+      <h3>Grading Requirements and Criteria</h3>
         <a href="https://www.britishkendoassociation.com/grading-requirements/"> Details </a>
       <ul>
         <li><strong>0 - Ikkyu</strong>: 6 months after starting, at least 12 years old</li>
-        <li><strong>1 - Shodan</strong>: 3 months after Ikkyu, atleast 13 years old</li>
-        <li><strong>2 - Nidan</strong>: 1 year after 1st Dan</li>
-        <li><strong>3 - Sandan</strong>: 2 years after 2nd Dan</li>
-        <li><strong>4 - Yondan</strong>: 3 years after 3rd Dan</li>
-        <li><strong>5 - Godan</strong>: 4 years after 4th Dan</li>
-        <li><strong>6 - Rokudan</strong>: 5 years after 5th Dan</li>
-        <li><strong>7 - Nanadan</strong>: 6 years after 6th Dan</li>
-        <li><strong>8 - Hachidan</strong>: 10 years after 7th Dan, atleast 46 years old</li>
+        <li><strong>1 - Shodan</strong>: 3 months after Ikkyu, at least 13 years old</li>
+        <li><strong>2 - Nidan</strong>: 1 year after Shodan</li>
+        <li><strong>3 - Sandan</strong>: 2 years after Nidan</li>
+        <li><strong>4 - Yondan</strong>: 3 years after Sandan</li>
+        <li><strong>5 - Godan</strong>: 4 years after Yondan</li>
+        <li><strong>6 - Rokudan</strong>: 5 years after Godan</li>
+        <li><strong>7 - Nanadan</strong>: 6 years after Rokudan</li>
+        <li><strong>8 - Hachidan</strong>: 10 years after Nanadan, at least 46 years old</li>
       </ul>
     </div>
   </div>
