--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
     </div>
 
     <div class="requirements">
-      <h3>Grading Requirements and Criteria</h3>
-        <a href="https://www.britishkendoassociation.com/grading-requirements/"> Details </a>
+      <h3>Grading Requirements</h3>
+        <a href="https://www.britishkendoassociation.com/grading-requirements/"> Grading Requirements and Criteria </a>
       <ul>
         <li><strong>0 - Ikkyu</strong>: 6 months after starting, at least 12 years old</li>
         <li><strong>1 - Shodan</strong>: 3 months after Ikkyu, at least 13 years old</li>
@@ -190,7 +190,7 @@
   </div>
 
   <footer>
-    Updated 2025-07-13 Version 1.0.2 &mdash; Built by Kyall Fordham-Weir | For issues and roadmap <a href="https://github.com/Kyallface/kyallface.github.io">GitHub</a>
+    Updated 2025-07-13 Version 1.0.3 &mdash; Built by Kyall Fordham-Weir | For issues and roadmap <a href="https://github.com/Kyallface/kyallface.github.io">GitHub</a>
   </footer>
 </body>
 </html>
